--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "react-skylight": "^0.5.1",
     "react-spring": "^9.0.0-rc.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
