--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-router": "^5.2.0",
